# SlicerZebrafishEmbryoAnalyzer

./: .gitignore  CMakeLists.txt  CORE_SOURCE.md  README.md  ZebrafishAnalysis.s4ext
.github/workflows/: ci.yml
ZebrafishAnalysis/: CMakeLists.txt  README.md  ZebrafishAnalysis.py
ZebrafishAnalysis/ZebrafishAnalysisCore/: length.py  manual.py  seg.py  seg_helper.py
ZebrafishAnalysis/ZebrafishAnalysisLib/: dependency_installer.py  detail_tab.py  errors.py  gallery_tab.py  inference_runner.py  inference_worker.py  logic.py  model_downloader.py  model_manifest.py  results_tab.py  widget.py  zoom_view.py
ZebrafishEmbryoAnalyzer/: CMakeLists.txt  README.md  ZebrafishEmbryoAnalyzer.py
ZebrafishEmbryoAnalyzer/Testing/: CMakeLists.txt
ZebrafishEmbryoAnalyzer/Testing/Python/: ZebrafishEmbryoAnalyzerTest.py
ZebrafishEmbryoAnalyzer/ZebrafishEmbryoAnalyzerCore/: length.py  manual.py  seg.py
ZebrafishEmbryoAnalyzer/ZebrafishEmbryoAnalyzerLib/: dependency_installer.py  detail_tab.py  errors.py  gallery_tab.py  inference_runner.py  inference_worker.py  logic.py  model_downloader.py  model_manifest.py  mrml.py  widget.py  zoom_view.py
tests/: conftest.py  test_characterization.py  test_core_imports.py  test_dependency_installer.py  test_ensure_models_ready.py  test_exclude_integration.py  test_export.py  test_h2_error_clarity.py  test_image_loading.py  test_inference_runner.py  test_inference_worker.py  test_install_flow_order.py  test_lazy_imports.py  test_length.py  test_lifecycle.py  test_logic.py  test_logic_class.py  test_logic_manual.py  test_manual.py  test_model_downloader.py  test_model_manifest.py  test_mrml_adapter.py  test_mrml_node.py  test_mrml_segmentation.py  test_overlay.py  test_packaging.py  test_parameter_node.py  test_safe_checkpoint_loading.py  test_seg.py  test_setup_model_offer.py  test_widget_preload.py
